B&L QA/objects/Freight_Set__c.object
<CustomObject>
    <description>NORDCSS: This object stores the freight sets for the Nordics, based on order value, order group, ship to ID and home delivery.</description>
    <fields>
        <fullName>Freight_Charge__c</fullName>
        <label>Freight Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Freight_Code__c</fullName>
        <label>Freight Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Home Delivery</fullName>
                </value>
                <value>
                    <fullName>Special</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Order_Amount__c</fullName>
        <label>Max Order Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Order_Amount__c</fullName>
        <label>Min Order Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SETID__c</fullName>
        <label>SETID</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NORDK</fullName>
                </value>
                <value>
                    <fullName>NORFI</fullName>
                </value>
                <value>
                    <fullName>NORNO</fullName>
                </value>
                <value>
                    <fullName>NORSE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ship_To_ID__c</fullName>
        <inlineHelpText>This is used for exception customers that have their own freight terms</inlineHelpText>
        <label>Ship To ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Valid_From__c</fullName>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <label>Freight Set</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Freight_Charge__c</columns>
        <columns>Freight_Code__c</columns>
        <columns>Max_Order_Amount__c</columns>
        <columns>Min_Order_Amount__c</columns>
        <columns>SETID__c</columns>
        <columns>Ship_To_ID__c</columns>
        <columns>Valid_From__c</columns>
        <columns>Valid_To__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Freight Set Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Freight Sets</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>